[package]
name = "pi_in_one_second"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
log = "0.4.22"
num-format = "0.4.4"
simple_logger = "5.0.0"
tokio = { version = "1.39.2", features = ["rt", "full"] }
